syntax = "proto3";
package schema.v2;

import "google/protobuf/struct.proto";
import "v2/project_source.proto";
import "v2/block_core.proto";

message UseCaseCreation {
	int32 project_generate_queue_id = 1;
	int32 project_id = 2;
  repeated UseCase use_cases = 3;
	repeated core.Block tickets = 9;
	repeated HtmlWireframe html_wireframes = 7;

	oneof state {
		Progress progress = 4;
		Error error = 5;
	}

	optional ProjectTable project_tables = 6;
	optional ProjectTable related_tables = 8;
	string master_language_code = 10;
	optional string repository_language_code = 11;

	message Progress {
		string message = 1;
	}

	message Error {
		string message = 1;
	}

	message ProjectTable {
		repeated ProjectSource.Table tables = 1;
		repeated ProjectSource.Relation relations = 2;
	}

	message HtmlWireframe {
		int32 id = 1;
		string html = 2;
	}
}

message UseCase {
	int32 id = 1;
  string name = 2;
  string node_id = 3;
  string parent_node_id = 4;
  string block_type = 5;
  repeated Content content = 6;
  optional google.protobuf.Struct properties = 7;
  int32 project_id = 8;
	repeated UseCase children = 9;

	message Content {
		string type = 1;
		string value = 2;
	}
}

message UseCaseCreationResponse {
	int32 project_generate_queue_id = 1;
	string message = 2;
	Module module = 3;
	Status status = 4;
	int32 token_usage = 5;

	enum Module {
		UNSPECIFIED = 0;
		BUSINESS_LOGIC = 1;
		ERD = 2;
		API = 3;
		IMAGE = 4;
		WIREFRAME = 5;
	}

	enum Status {
		STATUS_UNSPECIFIED = 0;
		STARTED = 1;
		SUCCEEDED = 2;
		FAILED = 3;
	}
}
